# modular-agent-cli

./: .gitignore  Cargo.toml  README.md
src/: agents.rs  main.rs
tools/ma-build/: Cargo.toml  registry.yaml
tools/ma-build/src/: codegen.rs  config.rs  main.rs  registry.rs  tui.rs
tools/ma-config/: Cargo.toml
tools/ma-config/src/: codegen.rs  config.rs  main.rs  registry.rs  tui.rs
